<resources>
    <string name="app_name">PartTime</string>

    <!--Guide-->
    <string name="guide_skip">跳过</string>
    <string name="guide_enter">开启全新体验</string>

    <!--Login-->
    <string name="login_username_hint">手机号码或邮箱</string>
    <string name="login_password_hint">密码</string>
    <string name="login_submit">登录</string>
    <string name="login_other_way">通过第三方账号登录</string>
    <string name="login_by_wx">微信</string>
    <string name="login_by_xl">新浪微博</string>
    <string name="login_no_account">没有账号? 注册  > </string>
    <string name="login_forget_pwd">忘记密码? 重置  > </string>
    <string name="input_username">请输入您的账号</string>
    <string name="input_password">请输入您的密码</string>

    <!--Register-->
    <string name="register_phone_hint">请输入手机号</string>
    <string name="register_password_hint">请输入密码</string>
    <string name="register_code_hint">请输入短信验证码</string>
    <string name="register_phone_error">手机号码格式错误，请重新输入</string>
    <string name="register_code">获取验证码</string>
    <string name="register_choose">请选择您的身份</string>
    <string name="register_student">学生</string>
    <string name="register_company">公司</string>
    <string name="register_submit">注册</string>

    <!--Reset-->
    <string name="reset_title">重置密码</string>
    <string name="reset_account">请输入您的账号</string>
    <string name="reset_account_check">请输入正确的手机号码</string>
    <string name="reset_auth_code">请输入您的短信验证码</string>
    <string name="reset_msg_hint">短信验证码</string>
    <string name="reset_msg">获取验证码</string>
    <string name="reset_submit">提 交</string>
    <string name="reset_password_hint">请输入您的新密码</string>
    <string name="reset_password_again_hint">请再次输入新密码</string>
    <string name="reset_password_check">两次输入的密码不一样</string>

    <!--modify-->
    <string name="modify_title">修改密码</string>
    <string name="modify_password_hint">请输入您的旧密码</string>

</resources>
