<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/lay_reset_container"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:background="@color/transparent_black"
              android:orientation="vertical">

    <include
        android:id="@+id/ly_reset_bar"
        layout="@layout/activity_main_login_navigation_bar"/>

    <LinearLayout
        android:id="@+id/ll_reset_pwd"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/bg_login_input_ok"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_reset_pwd_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:contentDescription="@null"
            android:background="@color/colorBlack"
            app:srcCompat="@drawable/ic_login_password"
            tools:ignore="RtlHardcoded"/>

        <View
            android:layout_width="1px"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:background="@color/colorBlack"
            tools:ignore="RtlHardcoded"/>

        <EditText
            android:id="@+id/et_reset_account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0.71"
            android:background="@null"
            android:hint="@string/reset_account"
            android:inputType="text"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textCursorDrawable="@null"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/iv_reset_pwd_del"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:srcCompat="@mipmap/ic_clear"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_register_sms_code"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_login_input_ok"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_register_auth_code_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@color/colorBlack"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_signup_sms"/>

        <View
            android:layout_width="1px"
            android:layout_height="22dp"
            android:background="@color/colorBlack"/>

        <EditText
            android:id="@+id/et_reset_auth_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0.71"
            android:background="@null"
            android:hint="@string/reset_msg_hint"
            android:inputType="text"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:textCursorDrawable="@null"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_reset_sms_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:alpha="0.4"
            android:background="@drawable/bg_register_call_sms"
            android:gravity="center_vertical"
            android:paddingBottom="4dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="4dp"
            android:text="@string/reset_msg"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_reset_submit"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/bg_login_submit_lock"
        android:elevation="0dp"
        android:text="@string/reset_submit"
        android:textColor="@color/account_lock_font_color"
        android:textSize="18sp"
        android:translationZ="0dp"
        tools:targetApi="lollipop"/>

</LinearLayout>